<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">partynow</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="poc_eventname">Name of Event</string>
    <string name="poc_address">Address of Event</string>
    <string name="poc_time">Time</string>
    <string name="poc_date">Date</string>
    <string name="poc_button">Send to Database!</string>
    <string name="poc_truerb">Public</string>
    <string name="poc_falserb">Private</string>
    <string name="title_activity_main">PartyNow</string>
    <string name="sign_up">Register Now!</string>
    <string name="log_in">Log In</string>
    <string name="reg_userstr">Desired Username:</string>
    <string name="reg_passstr">Password:</string>
    <string name="reg_namestr">Full Name:</string>
    <string name="reg_emailstr">Email:</string>
    <string name="reg_streetstr">Street Address:</string>
    <string name="reg_citystr">City:</string>
    <string name="reg_statestr">State:</string>
    <string name="reg_zipstr">Zip Code:</string>
    <string name="attend_button">Attend this Event!</string>
    <string name="see_attending">See Attendees</string>
    <string name="add_review">Add a Comment</string>
    <string name="add_friend">Add as Friend</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="party_preferences">Party Preferences</string>
    <string name="party_preferences_time">Show only parties after:</string>
    <string name="party_preferences_proximity">Proximity Detection:</string>
    <string name="party_preferences_proximity_hint">Enter distance in miles</string>
    <string name="view_host_profile">View Host Profile</string>
    <string name="menu_viewevent">View Event</string>
     <string name="main_posted">Events Posted</string>
      <string name="main_attending">Events Attending</string>


    <string-array name="items">
        <item>Home</item>
        <item>Profile</item>
        <item>Friends</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_my_profile">EditMyProfile</string>

</resources>
