<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/settings_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/party_preferences"
		        android:padding="10dp"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/settings_time"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/party_preferences_time"
		        android:padding="15dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TimePicker
		        android:id="@+id/party_time"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="20dp" />
		
		    <TextView
		        android:id="@+id/settings_proximity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/party_preferences_proximity"
		        android:padding="15dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		    <EditText 
		        android:id="@+id/proximity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/party_preferences_proximity_hint"
		        android:padding="20dp"/>
		    
		     <Button
		         android:id="@+id/submit_button"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:padding="15dp"
		         android:layout_gravity="center"
		         android:text="@string/save_changes_button" />
		
		</LinearLayout>
	</ScrollView>
<!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#666"
        android:dividerHeight="1dp"
        android:background="#333"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        />
</android.support.v4.widget.DrawerLayout>
