<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/textView1"
        android:paddingTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_main"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
         android:id="@+id/user_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="50dp"
         android:hint="Username"
         android:ems="10" >

         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/pass_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_gravity="center"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postEvent"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:layout_marginTop="50dp" />
    
</LinearLayout>
